# edoors

./: .gitignore  CMakeLists.txt  build.sh  cmakeconfig.h.in
cmake/Modules/: FindCompilerAttribute.cmake
doc/: Doxyfile.in
src/include/: Edoors.h  Eiotas.h  edoors_board.h  edoors_door.h  edoors_iota.h  edoors_link.h  edoors_main.h  edoors_particle.h  edoors_room.h  edoors_spin.h  edoors_userbits.h  eiotas_board.h  eiotas_door.h  eiotas_iota.h  eiotas_link.h  eiotas_main.h  eiotas_particle.h  eiotas_room.h  eiotas_spin.h  eiotas_userbits.h
src/lib/: CMakeLists.txt  edoors_board.c  edoors_door.c  edoors_iota.c  edoors_link.c  edoors_main.c  edoors_particle.c  edoors_private.h  edoors_room.c  edoors_spin.c  eiotas_board.c  eiotas_door.c  eiotas_iota.c  eiotas_link.c  eiotas_main.c  eiotas_particle.c  eiotas_private.h  eiotas_room.c  eiotas_spin.c
tests/: CMakeLists.txt  helper.c  helper.h  main.c  particle.c  spin.c  user_door.c
